...
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HHI-2E-q5F" userLabel="Like Button">
                                                    <rect key="frame" x="356" y="4" width="42" height="42"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="likeOrDislikeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="42" id="77U-68-V06"/>
                                                        <constraint firstAttribute="width" constant="42" id="7fz-Eo-t2n"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="Dislike_button"/>
...
                                    <constraint firstAttribute="height" constant="60" id="EdK-P9-BFX"/>
                                    <constraint firstAttribute="width" constant="60" id="mh7-zW-o6p"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I9r-bI-YNd">
                                <rect key="frame" x="16" y="682" width="382" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="Wrj-NT-g1m"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Войти">
                                    <color key="baseForegroundColor" name="YP Black"/>
...
                                <rect key="frame" x="8" y="56" width="48" height="48"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="AVL-Rw-o6P"/>
                                    <constraint firstAttribute="height" constant="48" id="cHi-NG-lI8"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Go_out_button"/>
                                <connections>
                                    <action selector="didTapBackButton" destination="puI-bZ-R2o" eventType="touchUpInside" id="ZIc-TB-6nI"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ov8-uZ-wUE">
                                <rect key="frame" x="182" y="776" width="50" height="50"/>
...
