...
        addSubviews()
        setupLayout()
        
        progressView.progressTintColor = UIColor(named: "YP Black")
        webView.navigationDelegate = self
        webView.translatesAutoresizingMaskIntoConstraints = false
        webView.accessibilityIdentifier = "UnsplashWebView"
        progressView.translatesAutoresizingMaskIntoConstraints = false
        
        presenter?.viewDidLoad()
        presenter?.didUpdateProgressValue(0)
        
        estimatedProgressObservation = webView.observe(
...
